fix bug in tindroid build